# xfriars

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DECISIONS.md  LICENSE  README.md  SECURITY.md  VOICE.md  VOICE_LONGFORM.md  env.example  pyproject.toml
.claude/: launch.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
articles/padres-xwoba-luck-2026/: article.md
docs/: CAPTIONS.md  GLOSSARY.md  METHODOLOGY.md  VISUAL_LIBRARY.md  index.html
docs/articles/padres-xwoba-luck-2026/: index.html
examples/: anchors.example.toml  interest_weights.example.toml  metrics.example.toml
src/padres_analytics/: board.py  caption.py  cli.py  config.py  daily.py  engagement.py  glossary.py  live.py  live_ask.py  live_card.py  live_moments.py  predict.py  settings.py
src/padres_analytics/app/: __init__.py  api.py  (+4 more)
studio/: index.html  package-lock.json  package.json  vite.config.ts
studio/src/: App.tsx  api.ts  index.css  main.tsx  tokens.ts  types.ts
tests/: conftest.py  test_angles.py  test_board.py  test_board_api.py  test_brain.py  test_caption.py  test_card_stem.py  test_chart_dataset.py  test_conjunction.py  test_coverage.py  test_daily.py  test_desk_api.py  test_detect_historical.py  test_discovery.py  test_draft_state.py  test_engagement.py  test_gamebox.py  test_gems.py  test_glossary.py  test_hypothesis.py  test_hypothesis_cycle.py  test_hypothesis_validate.py  test_interest.py  test_jobs.py  test_leads.py  test_learn.py  test_lenses.py  test_live.py  test_live_ask.py  test_live_ask_intents.py  test_live_card.py  test_live_moments.py  test_live_poll.py  test_live_serve.py  test_longform.py  test_luck_story.py  test_manager_card.py  test_manager_history.py  test_phase2.py  test_phase3.py  (+20 more)
(+124 files in other folders)
