[project]
name = "padres-analytics"
version = "0.1.0"
description = "Engine behind @xFriars — Padres analytics X account."
readme = "README.md"
authors = [
    { name = "Rob Savage", email = "63321971+robsavage619@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "httpx>=0.27",
    "jinja2>=3.1",
    "matplotlib>=3.9",
    "pandas>=2.2",
    "playwright>=1.47",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "typer>=0.12",
]

[dependency-groups]
dev = [
    "pillow>=10",
    "pre-commit>=3.8",
    "pyright>=1.1.380",
    "pytest>=8.3",
    "ruff>=0.6",
]

[project.scripts]
pad = "padres_analytics.cli:app"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle
    "F",      # pyflakes
    "I",      # isort
    "B",      # bugbear
    "UP",     # pyupgrade
    "SIM",    # simplify
    "RUF",    # ruff-specific
    "N",      # pep8-naming
    "D",      # pydocstyle (Google)
]
ignore = [
    "D100",   # missing docstring in module
    "D104",   # missing docstring in package
    "D203",   # 1-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv"]
